src/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alignment_Date_1__c</fullName>
        <label>Alignment Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alignment_Date_2__c</fullName>
        <label>Alignment Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value_ACV__c</fullName>
        <label>Annual Contract Value (ACV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renewal Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMS_Contract_Year__c</fullName>
        <inlineHelpText>This is the year of the actual contract for billing purposes. We will need to use to initially calculate the Billing Amount</inlineHelpText>
        <label>BMS Contract Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Initial_Invoice_Date2__c</fullName>
        <label>BMS Initial Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMS_Initial_Invoice_Date__c</fullName>
        <label>BMS - Initial Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMS_Invoiceevery__c</fullName>
        <inlineHelpText>Field from BMS in Months</inlineHelpText>
        <label>BMS Invoiceevery</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Next_Invoice_Date__c</fullName>
        <inlineHelpText>Next Invoice Date from BMS</inlineHelpText>
        <label>BMS Next Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMS_Order_RecordID__c</fullName>
        <inlineHelpText>Import from BMS</inlineHelpText>
        <label>BMS Order RecordID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_ScheduleNo__c</fullName>
        <inlineHelpText>BMS Schedule/Agreement Number for reference</inlineHelpText>
        <label>BMS ScheduleNo</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_TwoPer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>From BMS need to validate this on the order</inlineHelpText>
        <label>BMS - TwoPer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMS_VOD_Initial_Terms__c</fullName>
        <inlineHelpText>Initial terms of the VOD Contract</inlineHelpText>
        <label>BMS VOD Initial Terms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Year_1__c</fullName>
        <inlineHelpText>Legacy Data from BMS</inlineHelpText>
        <label>BMS Annual Amount Year 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Year_2__c</fullName>
        <inlineHelpText>Legacy Data from BMS</inlineHelpText>
        <label>BMS Annual Amount Year 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Year_3__c</fullName>
        <inlineHelpText>Legacy data from BMS</inlineHelpText>
        <label>BMS Annual Amount Year 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingCity_Shipping__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry_Shipping__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode_Shipping__c</fullName>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState_Shipping__c</fullName>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet_Shipping__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Billing Account)</relationshipLabel>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <formula>Billing_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <formula>Billing_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Partner__c</valueField>
            </filterItems>
            <infoMessage>You can pick a contact that belongs to the selected Account or Partner. This can be overridden.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Billing Contact)</relationshipLabel>
        <relationshipName>Job2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Master_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Billing Master Account)</relationshipLabel>
        <relationshipName>Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Master_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Consortium Billing. The Pricing/Discount should be recorded at this Order level belonging to the Master Account.</description>
        <inlineHelpText>Used in Consortium Billing. The Pricing/Discount should be recorded at this Order level belonging to the Master Account.</inlineHelpText>
        <label>Billing Master Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Job__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Billing_Master_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Job__c.Is_Billing_Master_Order__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Orders (Billing Master Order)</relationshipLabel>
        <relationshipName>BillingMasterOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_and_Shipping_ACCOUNTS_the_same__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Billing account and Shipping account are one and the same account.</inlineHelpText>
        <label>Billing and Shipping ACCOUNTS the same</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_and_Shipping_Address_the_same__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing and Shipping Address the same</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_Email_Address__c</fullName>
        <label>Candidate&apos;s Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Candidate_First_Name__c</fullName>
        <label>Candidate First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Last_Name__c</fullName>
        <label>Candidate Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Number__c</fullName>
        <formula>Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charges_without_a_Charge_Date__c</fullName>
        <label>Charges without a Charge Date</label>
        <summarizedField>Job_Product__c.Charges_without_a_Charge_Date__c</summarizedField>
        <summaryForeignKey>Job_Product__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company_Cod_from_BMS__c</fullName>
        <label>Company Cod from BMS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_IMO__c</fullName>
        <formula>Shipping_Account__r.Company_IMO__c</formula>
        <label>Company IMO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_MRR__c</fullName>
        <inlineHelpText>This is the contracted Monthly Recurring Revenue Calculated as  TCV / Terms(Months)</inlineHelpText>
        <label>Contracted MRR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Authentication__c</fullName>
        <label>Course Authentication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onshore</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Delivery_Method__c</fullName>
        <label>Course Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DVD/VOD</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Physical Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Agreement_Date_BMS__c</fullName>
        <label>Current Agreement Date (BMS)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustAcctNo_BMS__c</fullName>
        <label>CustAcctNo - BMS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Purchase_Order_Number__c</fullName>
        <label>Customer Purchase Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_VAT_Number__c</fullName>
        <formula>Account__r.VAT_No__c</formula>
        <label>Customer VAT Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Portfolio_Recieved__c</fullName>
        <label>Date Portfolio Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Portfolio_Sent_To_Assessor__c</fullName>
        <label>Date Portfolio Sent To Assessor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Despatch_Date_Errors__c</fullName>
        <formula>Service_Activation_Date__c - Despatch_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Despatch Date Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Despatch_Date__c</fullName>
        <label>Despatch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <label>Discount Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <inlineHelpText>Discount offered on this order</inlineHelpText>
        <label>Discount Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <formula>Start_Date__c</formula>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception_Log__c</fullName>
        <label>Exception Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Assets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IITIntended_Use__c</fullName>
        <label>Intended Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Intended_Use</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMO__c</fullName>
        <formula>Shipping_Account__r.Vessel_IMO__c</formula>
        <inlineHelpText>This field displays the Vessel IMO# from the platform account (if applicable).</inlineHelpText>
        <label>IMO #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Agreement_Date_BMS__c</fullName>
        <label>Initial Agreement Date - BMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Term__c</fullName>
        <label>Initial Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Batch__c</fullName>
        <label>Invoice Batch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch 1</fullName>
                </value>
                <value>
                    <fullName>Batch 2</fullName>
                </value>
                <value>
                    <fullName>Batch 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Details__c</fullName>
        <label>Invoice Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consolidated</fullName>
                </value>
                <value>
                    <fullName>Per Vessel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Billing_Master_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used in Consortium Billing. Check this field if you are using this Order to as the Billing Master Order for other child Orders. The Pricing/Discount should be recorded as part of this Order record</inlineHelpText>
        <label>Is Billing Master Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Entity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Order_Account_ID__c</fullName>
        <formula>Master_Order__r.Account__r.Acct_ID_18_Char__c</formula>
        <label>Master Order Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Number__c</fullName>
        <formula>Master_Order__r.Order_Number__c</formula>
        <label>Master Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Special_Terms__c</fullName>
        <formula>Master_Order__r.Special_Terms_Details__c</formula>
        <label>Master Order Special Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>ChildOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mid_Term_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mid Term Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Next_Charge_Date_For_Product__c</fullName>
        <label>Minimum Next Charge Date For Product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_of_Assessor__c</fullName>
        <label>Name of Assessor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Steven Gosling</fullName>
                </value>
                <value>
                    <fullName>Martin Whittle</fullName>
                </value>
                <value>
                    <fullName>John Partridge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <inlineHelpText>Subtotal - Discount Value</inlineHelpText>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Of_Child_Orders__c</fullName>
        <label>No Of Child Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Products__c</fullName>
        <label>No of Products</label>
        <summaryForeignKey>Job_Product__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Terms__c</fullName>
        <inlineHelpText>The duration of the service in months (for example: 12, 24, 36).  Leave this field blank to create a non-expiring or &quot;Evergreen&quot; subscription.</inlineHelpText>
        <label>Terms (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Official_Termination_Given__c</fullName>
        <label>Official Termination Given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_ID_18_Char__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order ID - 18 Char</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type_VT__c</fullName>
        <label>Order Type (VT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_VAT_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override VAT/Tax ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Text__c</fullName>
        <inlineHelpText>This is a text field to be used by workflow to update for sharing rules</inlineHelpText>
        <label>Partner Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 180</fullName>
                </value>
                <value>
                    <fullName>Due On Receipt</fullName>
                </value>
                <value>
                    <fullName>Prepay</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Letter of Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_or_Vessel_detail__c</fullName>
        <inlineHelpText>Select the specific platform or vessel category that is related to specific Titles.</inlineHelpText>
        <label>Vessel or Platform Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vessel_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Addressee__c</fullName>
        <label>Preferred Addressee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Billing_Day__c</fullName>
        <inlineHelpText>Some calendar months don&apos;t have the 29th, 30th or the 31st day. If you select these days and the running month doesn&apos;t have them, the invoices will be created on the last day of the month.</inlineHelpText>
        <label>Preferred Billing Day of the month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corresponding Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Orders created from this Quote</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Format__c</fullName>
        <inlineHelpText>Select the Regional Format for Sales Orders and Rental Libraries</inlineHelpText>
        <label>Regional Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PAL</fullName>
                </value>
                <value>
                    <fullName>NTSC</fullName>
                </value>
                <value>
                    <fullName>SECAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renew_to__c</fullName>
        <inlineHelpText>Opportunity or Order to renew</inlineHelpText>
        <label>Renew to?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                    <default>true</default>
                    <label>Order</label>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a &quot;Renewal&quot; Order, not a new rental order.</inlineHelpText>
        <label>Renewal Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Terms_Months__c</fullName>
        <label>Renewal Terms (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Orders (Renewed From)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>SF ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <formula>TEXT(Account__r.Sales_Office__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <inlineHelpText>Default to Order Create Date + 45 days</inlineHelpText>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This contact will be cc&apos;d on invoices.</inlineHelpText>
        <label>Second Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Second Billing Contact)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Contact_Email__c</fullName>
        <formula>Second_Billing_Contact__r.Email</formula>
        <label>Second Billing Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Activation_Date__c</fullName>
        <label>Service Start Date / Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Count_BMS__c</fullName>
        <inlineHelpText>used for data migration validation</inlineHelpText>
        <label>Ship Count - BMS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Account_Email__c</fullName>
        <formula>Shipping_Account__r.Main_Email__c</formula>
        <label>Shipping Account Email</label>
        <type>Text</type>
    </fields>
</CustomObject>